documentation map vector tiles

--- a/apps/maplibre-sandbox/index.html
+++ b/apps/maplibre-sandbox/index.html
@@ -10,9 +10,15 @@
 
 <body>
     <div id="root">
-        <div id="map"></div>
+        <ul>
+            <li><a href="/examples/01-cluster.html">01-cluster</a></li>
+            <li><a href="/examples/02-cluster-div.html">02-cluster-div</a></li>
+            <li><a href="/examples/03-popup.html">03-popup</a></li>
+            <li><a href="/examples/04-satellite.html">04-satellite</a></li>
+            <li><a href="/examples/05-draw.html">05-draw</a></li>
+            <li><a href="/examples/06-icons.html">06-icons</a></li>
+        </ul>
     </div>
-    <script type="module" src="/src/main.ts"></script>
 </body>
 
 </html>
