--- a/apps/maplibre-sandbox/index.html
+++ b/apps/maplibre-sandbox/index.html
@@ -11,12 +11,17 @@
 <body>
     <div id="root">
         <ul>
+            <li><a href="/examples/00-controls.html">00-controls</a></li>
             <li><a href="/examples/01-cluster.html">01-cluster</a></li>
             <li><a href="/examples/02-cluster-div.html">02-cluster-div</a></li>
             <li><a href="/examples/03-popup.html">03-popup</a></li>
             <li><a href="/examples/04-satellite.html">04-satellite</a></li>
             <li><a href="/examples/05-draw.html">05-draw</a></li>
             <li><a href="/examples/06-icons.html">06-icons</a></li>
+            <li><a href="/examples/07-change-layer-color.html">07-change-layer-color</a></li>
+            <li><a href="/examples/08-inspect.html">08-inspect</a></li>
+            <li><a href="/examples/09-toggle-style.html">09-toggle-style</a></li>
+            <li><a href="/examples/10-my-popup.html">10-my-popup</a></li>
         </ul>
     </div>
 </body>
