--- a/apps/maplibre-sandbox/index.html
+++ b/apps/maplibre-sandbox/index.html
@@ -22,6 +22,7 @@
             <li><a href="/examples/08-inspect.html">08-inspect</a></li>
             <li><a href="/examples/09-toggle-style.html">09-toggle-style</a></li>
             <li><a href="/examples/10-my-popup.html">10-my-popup</a></li>
+            <li><a href="/examples/11-update-path.html">11-update-path</a></li>
         </ul>
     </div>
 </body>
