--- a/apps/vite-sandbox/floating-react.html
+++ b/apps/vite-sandbox/floating-react.html
@@ -23,6 +23,22 @@
     </div>
     </div> -->
 
+    <div class="card">
+        <div class="box" id="box">
+            <div class="child" id="child">child 1</div>
+            <div class="child">child 2</div>
+            <div class="child">child 3</div>
+            <div class="child">child 1</div>
+            <div class="child">child 2</div>
+            <div class="child">child 3</div>
+            <div class="child">child 1</div>
+            <div class="child">child 2</div>
+            <div class="child">child 3</div>
+            <div class="child">child 1</div>
+            <div class="child">child 2</div>
+            <div class="child">child 3</div>
+        </div>
+    </div>
     <script type="module" src="/src/floating-react/main.tsx"></script>
 
 </body>
