add maplibre examples

--- a/apps/maplibre-sandbox/index.html
+++ b/apps/maplibre-sandbox/index.html
@@ -36,7 +36,12 @@
           href="/src/29-fly-to-a-location-based-on-scroll-position/index.html">29-fly-to-a-location-based-on-scroll-position</a>
       </li>
       <li><a href="/src/30-set-pitch-and-bearing/index.html">30-set-pitch-and-bearing</a></li>
-      <li><a href="/src//index.html"></a></li>
+      <li><a href="/src/31-icontrol/index.html">31 icontrol</a></li>
+      <li><a href="/src/32-get-features-under-the-mouse-pointer/index.html">32-get-features-under-the-mouse-pointer</a>
+      </li>
+      <li><a href="/src/33-toggle-interactions/index.html">33-toggle-interactions</a></li>
+      <li><a href="/src/34-highlight-features/index.html">34-highlight-features</a></li>
+      <li><a href="/src/35-plugin-directions/index.html">35-plugin-directions</a></li>
       <li><a href="/src//index.html"></a></li>
       <li><a href="/src//index.html"></a></li>
       <li><a href="/src//index.html"></a></li>
