AutoComplete Select components enhancements

--- a/apps/vite-sandbox/index.html
+++ b/apps/vite-sandbox/index.html
@@ -9,9 +9,18 @@
 </head>
 
 <body>
-  <a href="/src/floating-react/index.html">Floating react</a>
-  <a href="/src/select-composable/index.html">select-composable</a>
-  <a href="/src/select-2/index.html">select-2</a>
+  <div><a href="/src/0-template/index.html">0-template</a></div>
+  <div><a href="/src/client-point/index.html">client-point</a></div>
+  <div><a href="/src/context-menu/index.html">context-menu</a></div>
+  <div><a href="/src/floating/index.html">floating</a></div>
+  <div><a href="/src/search-1/index.html">search-1</a></div>
+  <div><a href="/src/search-2/index.html">search-2</a></div>
+  <div><a href="/src/search-3/index.html">search-3</a></div>
+  <div><a href="/src/select-1/index.html">select-1</a></div>
+  <div><a href="/src/select-3/index.html">select-3</a></div>
+  <div><a href="/src/select-composable/index.html">select-composable</a></div>
+  <div><a href="/src//index.html"></a></div>
+  <div><a href="/src//index.html"></a></div>
 </body>
 
 </html>
