--- a/apps/maplibre-sandbox/index.html
+++ b/apps/maplibre-sandbox/index.html
@@ -42,7 +42,7 @@
       <li><a href="/src/33-toggle-interactions/index.html">33-toggle-interactions</a></li>
       <li><a href="/src/34-highlight-features/index.html">34-highlight-features</a></li>
       <li><a href="/src/35-plugin-directions/index.html">35-plugin-directions</a></li>
-      <li><a href="/src//index.html"></a></li>
+      <li><a href="/src/36-context-handler/index.html">36-context-handler</a></li>
       <li><a href="/src//index.html"></a></li>
       <li><a href="/src//index.html"></a></li>
     </ul>
