move maplibre react custom examples

--- a/apps/maplibre-react-sandbox/index.html
+++ b/apps/maplibre-react-sandbox/index.html
@@ -18,7 +18,10 @@
     <li><a href="/src/api-/index.html"></a></li>
     <li><a href="/src/custom-01-my-marker/index.html">custom-01 my-marker</a></li>
     <li><a href="/src/custom-02-mylib/index.html">custom-02 mylib</a></li>
-    <li><a href="/src/custom-/index.html"></a></li>
+    <li><a href="/src/custom-03-context-handler/index.html">custom-03 context-handler</a></li>
+    <li><a href="/src/custom-04-direction/index.html">custom-04 direction</a></li>
+    <li><a href="/src/custom-05-draggable/index.html">custom-05 draggable</a></li>
+    <li><a href="/src/custom-06-layer-switcher/index.html">custom-06 layer-switcher</a></li>
     <li><a href="/src/custom-/index.html"></a></li>
     <li><a href="/src/custom-/index.html"></a></li>
     <li><a href="/src/others-00-template/index.html">others-00-template</a></li>
@@ -34,9 +37,8 @@
     <li><a href="/src/others-12-get-started/redux/index.html">others-12-get-started redux</a></li>
     <li><a href="/src/others-15-layers/index.html">others-15-layers</a></li>
     <li><a href="/src/others-16-side-by-side/index.html">others-16-side-by-side</a></li>
-    <li><a href="/src/others-17-context-handler/index.html">others-17-context-handler</a></li>
-    <li><a href="/src/others-18-direction/index.html">others-18-direction</a></li>
-    <li><a href="/src/others-19-draggable/index.html">others-19-draggable</a></li>
+    <li><a href="/src/others-/index.html"></a></li>
+    <li><a href="/src/others-/index.html"></a></li>
     <li><a href="/src/others-/index.html"></a></li>
   </ul>
 </body>
