ll-popup enhancements

--- a/apps/maplibre-sandbox/index.html
+++ b/apps/maplibre-sandbox/index.html
@@ -43,6 +43,10 @@
       <li><a href="/src/34-highlight-features/index.html">34-highlight-features</a></li>
       <li><a href="/src/35-plugin-directions/index.html">35-plugin-directions</a></li>
       <li><a href="/src/36-context-handler/index.html">36-context-handler</a></li>
+      <li><a href="/src/37-popup/index.html">37-popup</a></li>
+      <li><a href="/src//index.html"></a></li>
+      <li><a href="/src//index.html"></a></li>
+      <li><a href="/src//index.html"></a></li>
       <li><a href="/src//index.html"></a></li>
       <li><a href="/src//index.html"></a></li>
     </ul>
