fix geoservice base style in sandbox

--- a/apps/maplibre-react-sandbox/index.html
+++ b/apps/maplibre-react-sandbox/index.html
@@ -40,6 +40,11 @@
     <li><a href="/src/others-/index.html"></a></li>
     <li><a href="/src/others-/index.html"></a></li>
     <li><a href="/src/others-/index.html"></a></li>
+    <li><a href="/src/own-01-map/index.html">own 01-map</a></li>
+    <li><a href="/src/own-0/index.html"></a></li>
+    <li><a href="/src/own-0/index.html"></a></li>
+    <li><a href="/src/own-0/index.html"></a></li>
+    <li><a href="/src/own-0/index.html"></a></li>
   </ul>
 </body>
 
