react-maplibre-components component RMap

--- a/apps/maplibre-react-sandbox/index.html
+++ b/apps/maplibre-react-sandbox/index.html
@@ -41,7 +41,7 @@
     <li><a href="/src/others-/index.html"></a></li>
     <li><a href="/src/others-/index.html"></a></li>
     <li><a href="/src/own-01-map/index.html">own 01-map</a></li>
-    <li><a href="/src/own-0/index.html"></a></li>
+    <li><a href="/src/own-02-rmap/index.html">own 02-rmap</a></li>
     <li><a href="/src/own-0/index.html"></a></li>
     <li><a href="/src/own-0/index.html"></a></li>
     <li><a href="/src/own-0/index.html"></a></li>
