--- a/apps/maplibre-sandbox/index.html
+++ b/apps/maplibre-sandbox/index.html
@@ -44,8 +44,8 @@
       <li><a href="/src/35-plugin-directions/index.html">35-plugin-directions</a></li>
       <li><a href="/src/36-context-handler/index.html">36-context-handler</a></li>
       <li><a href="/src/37-popup/index.html">37-popup</a></li>
-      <li><a href="/src//index.html"></a></li>
-      <li><a href="/src//index.html"></a></li>
+      <li><a href="/src/38-data-events/index.html">38-data-events</a></li>
+      <li><a href="/src/39-view-state/index.html">39-view-state</a></li>
       <li><a href="/src//index.html"></a></li>
       <li><a href="/src//index.html"></a></li>
       <li><a href="/src//index.html"></a></li>
