--- a/apps/maplibre-sandbox/index.html
+++ b/apps/maplibre-sandbox/index.html
@@ -46,7 +46,7 @@
       <li><a href="/src/37-popup/index.html">37-popup</a></li>
       <li><a href="/src/38-data-events/index.html">38-data-events</a></li>
       <li><a href="/src/39-view-state/index.html">39-view-state</a></li>
-      <li><a href="/src//index.html"></a></li>
+      <li><a href="/src/40-handlers/index.html">40-handlers</a></li>
       <li><a href="/src//index.html"></a></li>
       <li><a href="/src//index.html"></a></li>
     </ul>
