--- a/apps/maplibre-react-sandbox/index.html
+++ b/apps/maplibre-react-sandbox/index.html
@@ -42,7 +42,10 @@
     <li><a href="/src/others-/index.html"></a></li>
     <li><a href="/src/own-01-map/index.html">own 01-map</a></li>
     <li><a href="/src/own-02-rmap/index.html">own 02-rmap</a></li>
-    <li><a href="/src/own-03-rsource-rlayer/index.html">own-03-rsource-rlayer</a></li>
+    <li><a href="/src/own-03-rsource-geojson/index.html">own-03-rsource-geojson</a></li>
+    <li><a href="/src/own-04-rsource-image-video/index.html">own-04-rsource-image-video</a></li>
+    <li><a href="/src/own-05-rsource-raster/index.html">own-05-rsource-raster</a></li>
+    <li><a href="/src/own-0/index.html"></a></li>
     <li><a href="/src/own-0/index.html"></a></li>
     <li><a href="/src/own-0/index.html"></a></li>
   </ul>
