add useControl / useRControl / RNavigationControl

--- a/apps/maplibre-react-sandbox/index.html
+++ b/apps/maplibre-react-sandbox/index.html
@@ -45,7 +45,7 @@
     <li><a href="/src/own-03-rsource-geojson/index.html">own-03-rsource-geojson</a></li>
     <li><a href="/src/own-04-rsource-image-video/index.html">own-04-rsource-image-video</a></li>
     <li><a href="/src/own-05-rsource-raster/index.html">own-05-rsource-raster</a></li>
-    <li><a href="/src/own-0/index.html"></a></li>
+    <li><a href="/src/own-06-use-rcontrol/index.html">own-06-use-rcontrol</a></li>
     <li><a href="/src/own-0/index.html"></a></li>
     <li><a href="/src/own-0/index.html"></a></li>
   </ul>
