RMarker with children / RPopup with RMarker

--- a/apps/maplibre-sandbox/src/38-data-events/index.html
+++ b/apps/maplibre-sandbox/src/38-data-events/index.html
@@ -19,6 +19,9 @@
       <button type="button" id="action-5">action 5 set terrain</button><br />
       <button type="button" id="action-6">action 6 set styleBase diff: true</button><br />
       <button type="button" id="action-7">action 7 set styleBase diff: false</button><br />
+      <button type="button" id="action-8">action 8 add raster dem source</button><br />
+      <button type="button" id="action-9">action 9 set terrain</button><br />
+      <button type="button" id="action-10">action 10 set light</button><br />
       <pre id="infos"></pre>
     </div>
   </div>
