--- a/apps/maplibre-sandbox/src/09-toggle-style/index.html
+++ b/apps/maplibre-sandbox/src/09-toggle-style/index.html
@@ -2,31 +2,34 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Vite + React + TS</title>
 </head>
 
 <body>
-    <div id="root">
-        <div class="map-overlay">
-            <div class="map-overlay-inner">
-                <fieldset>
-                    <label>Current Style</label>
-                    <div id="current-style">Maplibre Demo tile</div>
-                </fieldset>
+  <div id="root">
+    <div class="map-overlay">
 
-                <fieldset>
-                    <label>Select Style</label>
-                    <div id="styles"></div>
-                </fieldset>
-            </div>
-        </div>
+      <div class="map-overlay-inner">
+        <button type="button" id="action-1">action 8 add raster dem source</button><br />
+        <button type="button" id="action-2">action 9 set terrain</button><br />
+        <fieldset>
+          <label>Current Style</label>
+          <div id="current-style">Maplibre Demo tile</div>
+        </fieldset>
 
-        <div id="map"></div>
+        <fieldset>
+          <label>Select Style</label>
+          <div id="styles"></div>
+        </fieldset>
+      </div>
     </div>
-    <script type="module" src="./main.ts"></script>
+
+    <div id="map"></div>
+  </div>
+  <script type="module" src="./main.ts"></script>
 </body>
 
 </html>
