--- a/apps/maplibre-react-sandbox/index.html
+++ b/apps/maplibre-react-sandbox/index.html
@@ -40,13 +40,14 @@
     <li><a href="/src/others-/index.html"></a></li>
     <li><a href="/src/others-/index.html"></a></li>
     <li><a href="/src/others-/index.html"></a></li>
+    <li><a href="/src/own-00/index.html">own 00</a></li>
     <li><a href="/src/own-01-map/index.html">own 01-map</a></li>
     <li><a href="/src/own-02-rmap/index.html">own 02-rmap</a></li>
     <li><a href="/src/own-03-rsource-geojson/index.html">own-03-rsource-geojson</a></li>
     <li><a href="/src/own-04-rsource-image-video/index.html">own-04-rsource-image-video</a></li>
     <li><a href="/src/own-05-rsource-raster/index.html">own-05-rsource-raster</a></li>
     <li><a href="/src/own-06-use-rcontrol/index.html">own-06-use-rcontrol</a></li>
-    <li><a href="/src/own-0/index.html"></a></li>
+    <li><a href="/src/own-07-rterrain/index.html">own-07-rterrain</a></li>
     <li><a href="/src/own-0/index.html"></a></li>
   </ul>
 </body>
