--- a/apps/maplibre-react-sandbox/index.html
+++ b/apps/maplibre-react-sandbox/index.html
@@ -17,7 +17,7 @@
     <li><a href="/src/api-/index.html"></a></li>
     <li><a href="/src/api-/index.html"></a></li>
     <li><a href="/src/custom-01-my-marker/index.html">custom-01 my-marker</a></li>
-    <li><a href="/src/custom-02-mylib/index.html">custom-02 mylib</a></li>
+    <li><a href="/src/custom-02-reactive-marker/index.html">custom-02-reactive-marker</a></li>
     <li><a href="/src/custom-03-context-handler/index.html">custom-03 context-handler</a></li>
     <li><a href="/src/custom-04-direction/index.html">custom-04 direction</a></li>
     <li><a href="/src/custom-05-draggable/index.html">custom-05 draggable</a></li>
