--- a/apps/maplibre-react-sandbox/index.html
+++ b/apps/maplibre-react-sandbox/index.html
@@ -48,6 +48,11 @@
     <li><a href="/src/own-05-rsource-raster/index.html">own-05-rsource-raster</a></li>
     <li><a href="/src/own-06-use-rcontrol/index.html">own-06-use-rcontrol</a></li>
     <li><a href="/src/own-07-rterrain/index.html">own-07-rterrain</a></li>
+    <li><a href="/src/own-08-pegman-llmarker/index.html">own-08-pegman-llmarker</a></li>
+    <li><a href="/src/own-0/index.html"></a></li>
+    <li><a href="/src/own-0/index.html"></a></li>
+    <li><a href="/src/own-0/index.html"></a></li>
+    <li><a href="/src/own-0/index.html"></a></li>
     <li><a href="/src/own-0/index.html"></a></li>
   </ul>
 </body>
