add ResizeArea component

--- a/apps/maplibre-react-sandbox/index.html
+++ b/apps/maplibre-react-sandbox/index.html
@@ -49,7 +49,7 @@
     <li><a href="/src/own-06-use-rcontrol/index.html">own-06-use-rcontrol</a></li>
     <li><a href="/src/own-07-rterrain/index.html">own-07-rterrain</a></li>
     <li><a href="/src/own-08-pegman-llmarker/index.html">own-08-pegman-llmarker</a></li>
-    <li><a href="/src/own-0/index.html"></a></li>
+    <li><a href="/src/own-09-delimiter/index.html">own-09-delimiter</a></li>
     <li><a href="/src/own-0/index.html"></a></li>
     <li><a href="/src/own-0/index.html"></a></li>
     <li><a href="/src/own-0/index.html"></a></li>
