google street view example with destroy management

--- a/apps/maplibre-react-sandbox/index.html
+++ b/apps/maplibre-react-sandbox/index.html
@@ -50,9 +50,9 @@
     <li><a href="/src/own-07-rterrain/index.html">own-07-rterrain</a></li>
     <li><a href="/src/own-08-pegman-llmarker/index.html">own-08-pegman-llmarker</a></li>
     <li><a href="/src/own-09-delimiter/index.html">own-09-delimiter</a></li>
-    <li><a href="/src/own-0/index.html"></a></li>
-    <li><a href="/src/own-0/index.html"></a></li>
-    <li><a href="/src/own-0/index.html"></a></li>
+    <li><a href="/src/own-10-streetview-only/index.html">own-10-streetview-only</a></li>
+    <li><a href="/src/own-11-streetview-vanilla/index.html">own-11-streetview-vanilla</a></li>
+    <li><a href="/src/own-12-streetview-gmanager/index.html">own-12-streetview-gmanager</a></li>
     <li><a href="/src/own-0/index.html"></a></li>
   </ul>
 </body>
