layer switcher advanced example without animation

--- a/apps/maplibre-react-sandbox/index.html
+++ b/apps/maplibre-react-sandbox/index.html
@@ -22,8 +22,12 @@
     <li><a href="/src/custom-04-direction/index.html">custom-04 direction</a></li>
     <li><a href="/src/custom-05-draggable/index.html">custom-05 draggable</a></li>
     <li><a href="/src/custom-06-layer-switcher/index.html">custom-06 layer-switcher</a></li>
-    <li><a href="/src/custom-/index.html"></a></li>
-    <li><a href="/src/custom-/index.html"></a></li>
+    <li><a href="/src/custom-07-layer-switcher-advanced/index.html">custom-07-layer-switcher-advanced</a></li>
+    <li><a href="/src//index.html"></a></li>
+    <li><a href="/src//index.html"></a></li>
+    <li><a href="/src//index.html"></a></li>
+    <li><a href="/src//index.html"></a></li>
+    <li><a href="/src//index.html"></a></li>
 
     <li><a href="/src/own-00/index.html">own 00</a></li>
     <li><a href="/src/own-01-map/index.html">own 01-map</a></li>
@@ -38,7 +42,13 @@
     <li><a href="/src/own-10-streetview-only/index.html">own-10-streetview-only</a></li>
     <li><a href="/src/own-11-streetview-vanilla/index.html">own-11-streetview-vanilla</a></li>
     <li><a href="/src/own-12-streetview-gmanager/index.html">own-12-streetview-gmanager</a></li>
-    <li><a href="/src/own-0/index.html"></a></li>
+    <li><a href="/src//index.html"></a></li>
+    <li><a href="/src//index.html"></a></li>
+    <li><a href="/src//index.html"></a></li>
+    <li><a href="/src//index.html"></a></li>
+    <li><a href="/src//index.html"></a></li>
+    <li><a href="/src//index.html"></a></li>
+    <li><a href="/src//index.html"></a></li>
   </ul>
 </body>
 
