--- a/apps/maplibre-sandbox/index.html
+++ b/apps/maplibre-sandbox/index.html
@@ -47,6 +47,16 @@
       <li><a href="/src/38-data-events/index.html">38-data-events</a></li>
       <li><a href="/src/39-view-state/index.html">39-view-state</a></li>
       <li><a href="/src/40-handlers/index.html">40-handlers</a></li>
+      <li><a href="/src/41-set-style-advanced/index.html">41-set-style-advanced</a></li>
+      <li><a href="/src//index.html"></a></li>
+      <li><a href="/src//index.html"></a></li>
+      <li><a href="/src//index.html"></a></li>
+      <li><a href="/src//index.html"></a></li>
+      <li><a href="/src//index.html"></a></li>
+      <li><a href="/src//index.html"></a></li>
+      <li><a href="/src//index.html"></a></li>
+      <li><a href="/src//index.html"></a></li>
+      <li><a href="/src//index.html"></a></li>
       <li><a href="/src//index.html"></a></li>
       <li><a href="/src//index.html"></a></li>
     </ul>
