customFetch add tests

--- a/apps/maplibre-react-sandbox/index.html
+++ b/apps/maplibre-react-sandbox/index.html
@@ -23,7 +23,7 @@
     <li><a href="/src/custom-05-draggable/index.html">custom-05 draggable</a></li>
     <li><a href="/src/custom-06-layer-switcher/index.html">custom-06 layer-switcher</a></li>
     <li><a href="/src/custom-07-layer-switcher-advanced/index.html">custom-07-layer-switcher-advanced</a></li>
-    <li><a href="/src//index.html"></a></li>
+    <li><a href="/src/custom-08-notifications/index.html">custom-08-notifications</a></li>
     <li><a href="/src//index.html"></a></li>
     <li><a href="/src//index.html"></a></li>
     <li><a href="/src//index.html"></a></li>
