--- a/apps/maplibre-sandbox/index.html
+++ b/apps/maplibre-sandbox/index.html
@@ -48,7 +48,7 @@
       <li><a href="/src/39-view-state/index.html">39-view-state</a></li>
       <li><a href="/src/40-handlers/index.html">40-handlers</a></li>
       <li><a href="/src/41-set-style-advanced/index.html">41-set-style-advanced</a></li>
-      <li><a href="/src//index.html"></a></li>
+      <li><a href="/src/42-sprite/index.html">42-sprite</a></li>
       <li><a href="/src//index.html"></a></li>
       <li><a href="/src//index.html"></a></li>
       <li><a href="/src//index.html"></a></li>
