--- a/apps/maplibre-react-sandbox/index.html
+++ b/apps/maplibre-react-sandbox/index.html
@@ -42,7 +42,7 @@
     <li><a href="/src/own-10-streetview-only/index.html">own-10-streetview-only</a></li>
     <li><a href="/src/own-11-streetview-vanilla/index.html">own-11-streetview-vanilla</a></li>
     <li><a href="/src/own-12-streetview-gmanager/index.html">own-12-streetview-gmanager</a></li>
-    <li><a href="/src//index.html"></a></li>
+    <li><a href="/src/own-13-fps/index.html">own-13-fps</a></li>
     <li><a href="/src//index.html"></a></li>
     <li><a href="/src//index.html"></a></li>
     <li><a href="/src//index.html"></a></li>
