export maplibre-react-sandbox

--- a/apps/maplibre-react-sandbox/index.html
+++ b/apps/maplibre-react-sandbox/index.html
@@ -6,49 +6,108 @@
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Vite + React + TS</title>
+  <script type="module" src="./src/shared/app.ts"></script>
 </head>
 
 <body>
+  <h1>Maplibre react sandbox</h1>
   <ul>
-    <li><a href="/src/example01/index.html">example01</a></li>
-    <li><a href="/src/api-01-use-map/index.html">api-01 use-map</a></li>
-    <li><a href="/src/api-02-highlight/index.html">api-02 highlight</a></li>
-    <li><a href="/src/api-/index.html"></a></li>
-    <li><a href="/src/api-/index.html"></a></li>
-    <li><a href="/src/api-/index.html"></a></li>
-    <li><a href="/src/custom-01-my-marker/index.html">custom-01 my-marker</a></li>
-    <li><a href="/src/custom-02-reactive-marker/index.html">custom-02-reactive-marker</a></li>
-    <li><a href="/src/custom-03-context-handler/index.html">custom-03 context-handler</a></li>
-    <li><a href="/src/custom-04-direction/index.html">custom-04 direction</a></li>
-    <li><a href="/src/custom-05-draggable/index.html">custom-05 draggable</a></li>
-    <li><a href="/src/custom-06-layer-switcher/index.html">custom-06 layer-switcher</a></li>
-    <li><a href="/src/custom-07-layer-switcher-advanced/index.html">custom-07-layer-switcher-advanced</a></li>
-    <li><a href="/src/custom-08-notifications/index.html">custom-08-notifications</a></li>
-    <li><a href="/src//index.html"></a></li>
-    <li><a href="/src//index.html"></a></li>
-    <li><a href="/src//index.html"></a></li>
-    <li><a href="/src//index.html"></a></li>
-
-    <li><a href="/src/own-00/index.html">own 00</a></li>
-    <li><a href="/src/own-01-map/index.html">own 01-map</a></li>
-    <li><a href="/src/own-02-rmap/index.html">own 02-rmap</a></li>
-    <li><a href="/src/own-03-rsource-geojson/index.html">own-03-rsource-geojson</a></li>
-    <li><a href="/src/own-04-rsource-image-video/index.html">own-04-rsource-image-video</a></li>
-    <li><a href="/src/own-05-rsource-raster/index.html">own-05-rsource-raster</a></li>
-    <li><a href="/src/own-06-use-rcontrol/index.html">own-06-use-rcontrol</a></li>
-    <li><a href="/src/own-07-rterrain/index.html">own-07-rterrain</a></li>
-    <li><a href="/src/own-08-pegman-llmarker/index.html">own-08-pegman-llmarker</a></li>
-    <li><a href="/src/own-09-delimiter/index.html">own-09-delimiter</a></li>
-    <li><a href="/src/own-10-streetview-only/index.html">own-10-streetview-only</a></li>
-    <li><a href="/src/own-11-streetview-vanilla/index.html">own-11-streetview-vanilla</a></li>
-    <li><a href="/src/own-12-streetview-gmanager/index.html">own-12-streetview-gmanager</a></li>
-    <li><a href="/src/own-13-fps/index.html">own-13-fps</a></li>
-    <li><a href="/src//index.html"></a></li>
-    <li><a href="/src//index.html"></a></li>
-    <li><a href="/src//index.html"></a></li>
-    <li><a href="/src//index.html"></a></li>
-    <li><a href="/src//index.html"></a></li>
-    <li><a href="/src//index.html"></a></li>
+    <li>
+      <img width="800" height="600" src="/src/api-01-use-map/screenshot.png" />
+      <a href="/src/api-01-use-map/index.html">api-01 use-map</a>
+    </li>
+    <li>
+      <img width="800" height="600" src="/src/api-02-highlight/screenshot.png" />
+      <a href="/src/api-02-highlight/index.html">api-02 highlight</a>
+    </li>
+    <li>
+      <img width="800" height="600" src="/src/custom-01-my-marker/screenshot.png" />
+      <a href="/src/custom-01-my-marker/index.html">custom-01 my-marker</a>
+    </li>
+    <li>
+      <img width="800" height="600" src="/src/custom-02-reactive-marker/screenshot.png" />
+      <a href="/src/custom-02-reactive-marker/index.html">custom-02-reactive-marker</a>
+    </li>
+    <li>
+      <img width="800" height="600" src="/src/custom-03-context-handler/screenshot.png" />
+      <a href="/src/custom-03-context-handler/index.html">custom-03 context-handler</a>
+    </li>
+    <li>
+      <img width="800" height="600" src="/src/custom-04-direction/screenshot.png" />
+      <a href="/src/custom-04-direction/index.html">custom-04 direction</a>
+    </li>
+    <li>
+      <img width="800" height="600" src="/src/custom-05-draggable/screenshot.png" />
+      <a href="/src/custom-05-draggable/index.html">custom-05 draggable</a>
+    </li>
+    <li>
+      <img width="800" height="600" src="/src/custom-06-layer-switcher/screenshot.png" />
+      <a href="/src/custom-06-layer-switcher/index.html">custom-06 layer-switcher</a>
+    </li>
+    <li>
+      <img width="800" height="600" src="/src/custom-07-layer-switcher-advanced/screenshot.png" />
+      <a href="/src/custom-07-layer-switcher-advanced/index.html">custom-07-layer-switcher-advanced</a>
+    </li>
+    <li>
+      <img width="800" height="600" src="/src/custom-08-notifications/screenshot.png" />
+      <a href="/src/custom-08-notifications/index.html">custom-08-notifications</a>
+    </li>
+    <li>
+      <img width="800" height="600" src="/src/own-00/screenshot.png" />
+      <a href="/src/own-00/index.html">own 00</a>
+    </li>
+    <li>
+      <img width="800" height="600" src="/src/own-01-map/screenshot.png" />
+      <a href="/src/own-01-map/index.html">own 01-map</a>
+    </li>
+    <li>
+      <img width="800" height="600" src="/src/own-02-rmap/screenshot.png" />
+      <a href="/src/own-02-rmap/index.html">own 02-rmap</a>
+    </li>
+    <li>
+      <img width="800" height="600" src="/src/own-03-rsource-geojson/screenshot.png" />
+      <a href="/src/own-03-rsource-geojson/index.html">own-03-rsource-geojson</a>
+    </li>
+    <li>
+      <img width="800" height="600" src="/src/own-04-rsource-image-video/screenshot.png" />
+      <a href="/src/own-04-rsource-image-video/index.html">own-04-rsource-image-video</a>
+    </li>
+    <li>
+      <img width="800" height="600" src="/src/own-05-rsource-raster/screenshot.png" />
+      <a href="/src/own-05-rsource-raster/index.html">own-05-rsource-raster</a>
+    </li>
+    <li>
+      <img width="800" height="600" src="/src/own-06-use-rcontrol/screenshot.png" />
+      <a href="/src/own-06-use-rcontrol/index.html">own-06-use-rcontrol</a>
+    </li>
+    <li>
+      <img width="800" height="600" src="/src/own-07-rterrain/screenshot.png" />
+      <a href="/src/own-07-rterrain/index.html">own-07-rterrain</a>
+    </li>
+    <li>
+      <img width="800" height="600" src="/src/own-08-pegman-llmarker/screenshot.png" />
+      <a href="/src/own-08-pegman-llmarker/index.html">own-08-pegman-llmarker</a>
+    </li>
+    <li>
+      <img width="800" height="600" src="/src/own-09-delimiter/screenshot.png" />
+      <a href="/src/own-09-delimiter/index.html">own-09-delimiter</a>
+    </li>
+    <li>
+      <img width="800" height="600" src="/src/own-10-streetview-only/screenshot.png" />
+      <a href="/src/own-10-streetview-only/index.html">own-10-streetview-only</a>
+    </li>
+    <li>
+      <img width="800" height="600" src="/src/own-11-streetview-vanilla/screenshot.png" />
+      <a href="/src/own-11-streetview-vanilla/index.html">own-11-streetview-vanilla</a>
+    </li>
+    <li>
+      <img width="800" height="600" src="/src/own-12-streetview-gmanager/screenshot.png" />
+      <a href="/src/own-12-streetview-gmanager/index.html">own-12-streetview-gmanager</a>
+    </li>
+    <li>
+      <img width="800" height="600" src="/src/own-13-fps/screenshot.png" />
+      <a href="/src/own-13-fps/index.html">own-13-fps</a>
+    </li>
   </ul>
 </body>
 
