front add prefetch plugin

--- a/apps/maplibre-react-sandbox/index.html
+++ b/apps/maplibre-react-sandbox/index.html
@@ -13,100 +13,154 @@
   <h1>Maplibre react sandbox</h1>
   <ul>
     <li>
-      <img width="800" height="600" src="/src/api-01-use-map/screenshot.png" />
-      <a href="/src/api-01-use-map/index.html">api-01 use-map</a>
+      <a href="/src/api-01-use-map/index.html">
+        <img width="800" height="600" src="/src/api-01-use-map/screenshot.png" />
+        <div>api-01 use-map</div>
+      </a>
     </li>
     <li>
-      <img width="800" height="600" src="/src/api-02-highlight/screenshot.png" />
-      <a href="/src/api-02-highlight/index.html">api-02 highlight</a>
+      <a href="/src/api-02-highlight/index.html">
+        <img width="800" height="600" src="/src/api-02-highlight/screenshot.png" />
+        <div>api-02 highlight</div>
+      </a>
     </li>
     <li>
-      <img width="800" height="600" src="/src/custom-01-my-marker/screenshot.png" />
-      <a href="/src/custom-01-my-marker/index.html">custom-01 my-marker</a>
+      <a href="/src/custom-01-my-marker/index.html">
+        <img width="800" height="600" src="/src/custom-01-my-marker/screenshot.png" />
+        <div>custom-01 my-marker</div>
+      </a>
     </li>
     <li>
-      <img width="800" height="600" src="/src/custom-02-reactive-marker/screenshot.png" />
-      <a href="/src/custom-02-reactive-marker/index.html">custom-02-reactive-marker</a>
+      <a href="/src/custom-02-reactive-marker/index.html">
+        <img width="800" height="600" src="/src/custom-02-reactive-marker/screenshot.png" />
+        <div>custom-02-reactive-marker</div>
+      </a>
     </li>
     <li>
-      <img width="800" height="600" src="/src/custom-03-context-handler/screenshot.png" />
-      <a href="/src/custom-03-context-handler/index.html">custom-03 context-handler</a>
+      <a href="/src/custom-03-context-handler/index.html">
+        <img width="800" height="600" src="/src/custom-03-context-handler/screenshot.png" />
+        <div>custom-03 context-handler</div>
+      </a>
     </li>
     <li>
-      <img width="800" height="600" src="/src/custom-04-direction/screenshot.png" />
-      <a href="/src/custom-04-direction/index.html">custom-04 direction</a>
+      <a href="/src/custom-04-direction/index.html">
+        <img width="800" height="600" src="/src/custom-04-direction/screenshot.png" />
+        <div>custom-04 direction</div>
+      </a>
     </li>
     <li>
-      <img width="800" height="600" src="/src/custom-05-draggable/screenshot.png" />
-      <a href="/src/custom-05-draggable/index.html">custom-05 draggable</a>
+      <a href="/src/custom-05-draggable/index.html">
+        <img width="800" height="600" src="/src/custom-05-draggable/screenshot.png" />
+        <div>custom-05 draggable</div>
+      </a>
     </li>
     <li>
-      <img width="800" height="600" src="/src/custom-06-layer-switcher/screenshot.png" />
-      <a href="/src/custom-06-layer-switcher/index.html">custom-06 layer-switcher</a>
+      <a href="/src/custom-06-layer-switcher/index.html">
+        <img width="800" height="600" src="/src/custom-06-layer-switcher/screenshot.png" />
+        <div>custom-06 layer-switcher</div>
+      </a>
     </li>
     <li>
-      <img width="800" height="600" src="/src/custom-07-layer-switcher-advanced/screenshot.png" />
-      <a href="/src/custom-07-layer-switcher-advanced/index.html">custom-07-layer-switcher-advanced</a>
+      <a href="/src/custom-07-layer-switcher-advanced/index.html">
+        <img width="800" height="600" src="/src/custom-07-layer-switcher-advanced/screenshot.png" />
+        <div>custom-07-layer-switcher-advanced</div>
+      </a>
     </li>
     <li>
-      <img width="800" height="600" src="/src/custom-08-notifications/screenshot.png" />
-      <a href="/src/custom-08-notifications/index.html">custom-08-notifications</a>
+      <a href="/src/custom-08-notifications/index.html">
+        <img width="800" height="600" src="/src/custom-08-notifications/screenshot.png" />
+        <div>custom-08-notifications</div>
+      </a>
     </li>
     <li>
-      <img width="800" height="600" src="/src/own-00/screenshot.png" />
-      <a href="/src/own-00/index.html">own 00</a>
+      <a href="/src/custom-09-geolocation/index.html">
+        <img width="800" height="600" src="/src/custom-09-geolocation/screenshot.png" />
+        <div>custom-09-geolocation</div>
+      </a>
     </li>
     <li>
-      <img width="800" height="600" src="/src/own-01-map/screenshot.png" />
-      <a href="/src/own-01-map/index.html">own 01-map</a>
+      <a href="/src/own-00/index.html">
+        <img width="800" height="600" src="/src/own-00/screenshot.png" />
+        <div>own 00</div>
+      </a>
     </li>
     <li>
-      <img width="800" height="600" src="/src/own-02-rmap/screenshot.png" />
-      <a href="/src/own-02-rmap/index.html">own 02-rmap</a>
+      <a href="/src/own-01-map/index.html">
+        <img width="800" height="600" src="/src/own-01-map/screenshot.png" />
+        <div>own 01-map</div>
+      </a>
     </li>
     <li>
-      <img width="800" height="600" src="/src/own-03-rsource-geojson/screenshot.png" />
-      <a href="/src/own-03-rsource-geojson/index.html">own-03-rsource-geojson</a>
+      <a href="/src/own-02-rmap/index.html">
+        <img width="800" height="600" src="/src/own-02-rmap/screenshot.png" />
+        <div>own 02-rmap</div>
+      </a>
     </li>
     <li>
-      <img width="800" height="600" src="/src/own-04-rsource-image-video/screenshot.png" />
-      <a href="/src/own-04-rsource-image-video/index.html">own-04-rsource-image-video</a>
+      <a href="/src/own-03-rsource-geojson/index.html">
+        <img width="800" height="600" src="/src/own-03-rsource-geojson/screenshot.png" />
+        <div>own-03-rsource-geojson</div>
+      </a>
     </li>
     <li>
-      <img width="800" height="600" src="/src/own-05-rsource-raster/screenshot.png" />
-      <a href="/src/own-05-rsource-raster/index.html">own-05-rsource-raster</a>
+      <a href="/src/own-04-rsource-image-video/index.html">
+        <img width="800" height="600" src="/src/own-04-rsource-image-video/screenshot.png" />
+        <div>own-04-rsource-image-video</div>
+      </a>
     </li>
     <li>
-      <img width="800" height="600" src="/src/own-06-use-rcontrol/screenshot.png" />
-      <a href="/src/own-06-use-rcontrol/index.html">own-06-use-rcontrol</a>
+      <a href="/src/own-05-rsource-raster/index.html">
+        <img width="800" height="600" src="/src/own-05-rsource-raster/screenshot.png" />
+        <div>own-05-rsource-raster</div>
+      </a>
     </li>
     <li>
-      <img width="800" height="600" src="/src/own-07-rterrain/screenshot.png" />
-      <a href="/src/own-07-rterrain/index.html">own-07-rterrain</a>
+      <a href="/src/own-06-use-rcontrol/index.html">
+        <img width="800" height="600" src="/src/own-06-use-rcontrol/screenshot.png" />
+        <div>own-06-use-rcontrol</div>
+      </a>
     </li>
     <li>
-      <img width="800" height="600" src="/src/own-08-pegman-llmarker/screenshot.png" />
-      <a href="/src/own-08-pegman-llmarker/index.html">own-08-pegman-llmarker</a>
+      <a href="/src/own-07-rterrain/index.html">
+        <img width="800" height="600" src="/src/own-07-rterrain/screenshot.png" />
+        <div>own-07-rterrain</div>
+      </a>
     </li>
     <li>
-      <img width="800" height="600" src="/src/own-09-delimiter/screenshot.png" />
-      <a href="/src/own-09-delimiter/index.html">own-09-delimiter</a>
+      <a href="/src/own-08-pegman-llmarker/index.html">
+        <img width="800" height="600" src="/src/own-08-pegman-llmarker/screenshot.png" />
+        <div>own-08-pegman-llmarker</div>
+      </a>
     </li>
     <li>
-      <img width="800" height="600" src="/src/own-10-streetview-only/screenshot.png" />
-      <a href="/src/own-10-streetview-only/index.html">own-10-streetview-only</a>
+      <a href="/src/own-09-delimiter/index.html">
+        <img width="800" height="600" src="/src/own-09-delimiter/screenshot.png" />
+        <div>own-09-delimiter</div>
+      </a>
     </li>
     <li>
-      <img width="800" height="600" src="/src/own-11-streetview-vanilla/screenshot.png" />
-      <a href="/src/own-11-streetview-vanilla/index.html">own-11-streetview-vanilla</a>
+      <a href="/src/own-10-streetview-only/index.html">
+        <img width="800" height="600" src="/src/own-10-streetview-only/screenshot.png" />
+        <div>own-10-streetview-only</div>
+      </a>
     </li>
     <li>
-      <img width="800" height="600" src="/src/own-12-streetview-gmanager/screenshot.png" />
-      <a href="/src/own-12-streetview-gmanager/index.html">own-12-streetview-gmanager</a>
+      <a href="/src/own-11-streetview-vanilla/index.html">
+        <img width="800" height="600" src="/src/own-11-streetview-vanilla/screenshot.png" />
+        <div>own-11-streetview-vanilla</div>
+      </a>
     </li>
     <li>
-      <img width="800" height="600" src="/src/own-13-fps/screenshot.png" />
-      <a href="/src/own-13-fps/index.html">own-13-fps</a>
+      <a href="/src/own-12-streetview-gmanager/index.html">
+        <img width="800" height="600" src="/src/own-12-streetview-gmanager/screenshot.png" />
+        <div>own-12-streetview-gmanager</div>
+      </a>
+    </li>
+    <li>
+      <a href="/src/own-13-fps/index.html">
+        <img width="800" height="600" src="/src/own-13-fps/screenshot.png" />
+        <div>own-13-fps</div>
+      </a>
     </li>
   </ul>
 </body>
