--- a/apps/maplibre-sandbox/index.html
+++ b/apps/maplibre-sandbox/index.html
@@ -41,7 +41,6 @@
       </li>
       <li><a href="/src/33-toggle-interactions/index.html">33-toggle-interactions</a></li>
       <li><a href="/src/34-highlight-features/index.html">34-highlight-features</a></li>
-      <li><a href="/src/35-plugin-directions/index.html">35-plugin-directions</a></li>
       <li><a href="/src/36-context-handler/index.html">36-context-handler</a></li>
       <li><a href="/src/37-popup/index.html">37-popup</a></li>
       <li><a href="/src/38-data-events/index.html">38-data-events</a></li>
@@ -50,7 +49,7 @@
       <li><a href="/src/41-set-style-advanced/index.html">41-set-style-advanced</a></li>
       <li><a href="/src/42-sprite/index.html">42-sprite</a></li>
       <li><a href="/src/43-geolocation/index.html">43-geolocation</a></li>
-      <li><a href="/src//index.html"></a></li>
+      <li><a href="/src/44-style-spec/index.html">44-style-spec</a></li>
       <li><a href="/src//index.html"></a></li>
       <li><a href="/src//index.html"></a></li>
       <li><a href="/src//index.html"></a></li>
