--- a/apps/sandbox/index.html
+++ b/apps/sandbox/index.html
@@ -165,6 +165,12 @@
           <div>own-13-fps</div>
         </a>
       </li>
+      <li>
+        <a href="/src/mr-own/14-mount/index.html">
+          <img width="800" height="600" src="/src/mr-own/14-mount/screenshot.png" />
+          <div>own-14-mount</div>
+        </a>
+      </li>
     </ul>
 
     <h2 class="mt-8 mb-2">Maplibre</h2>
